--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
   
   <h2>This is the home page for the Professional Ruby on Rails Developer Course</h2>
   
-  <%= link_to "Sign up now!", "", class: "btn btn-lg btn-success" %>
+  <%= link_to "Sign up now!", register_path, class: "btn btn-lg btn-success" %>
 </div>
 
 <div class="row">
@@ -16,10 +16,10 @@
   </div>
   <div class="col-lg-4">
     <h3 class="midrow">
-      View Recipes as Guest User
+      Sign in to your account
     </h3>
-    <h2 class="left">Browse and view recipes as a guest and Sign up later</h2>
-    <p><%= link_to "Browse Recipe Listing", "", class: "btn btn-warning btn-small" %></p>
+    <h2 class="left">Add/update your recipes, create reviews, and likes/dislikes recipes and much more!</h2>
+    <p><%= link_to "Login to your account", login_path, class: "btn btn-warning btn-small" %></p>
   </div>
   <div class="col-lg-4">
     <h3 class="midrow">
